# greyhound-facts-api

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-infra.txt  requirements.txt
.github/workflows/: main.yml  pr.yml  release.yml
app/: __init__.py  lambda_handler.py  main.py
app/api/: admin.py  facts.py
app/core/: auth.py  config.py  exceptions.py  logging.py  middleware.py  request_id.py
app/models/: error.py  request.py  response.py
app/repositories/: dynamodb_repository.py
app/services/: fact_service.py
infra/: app.py
infra/stacks/: api_stack.py  data_stack.py  observability_stack.py  security_stack.py
scripts/: seed.py
tests/: conftest.py
tests/api/: test_admin.py  test_facts.py
tests/integration/: test_dynamodb_repository.py
tests/unit/: test_auth.py  test_fact_service.py  test_models.py
