[project]
name = "greyhound-facts-api"
version = "1.0.0"
description = "Serverless FastAPI + DynamoDB API for Greyhound facts"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "B", "UP", "S", "A", "C4", "T20", "RET", "SIM"]
ignore = ["S101", "B008"]  # S101: allow assert in tests; B008: FastAPI Depends() in defaults

[tool.ruff.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "E501"]
"scripts/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["app/lambda_handler.py"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]
